MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/CaseSLA__c.object-meta.xml
<CustomObject>
    <label>SLA</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Case SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases SLAs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>