MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_Email__c</fullName>
    <formula>CaseOwner__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Email</label>
    <type>Text</type>
</CustomField>