MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Case_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager_Email__c</fullName>
    <formula>CaseId__r.Manager_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Manager Email</label>
    <type>Text</type>
</CustomField>