MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Milestones_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>