MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Milestones_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>