MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Default &amp; Collection</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Operation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Customer Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>