MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Time</label>
    <type>DateTime</type>
</CustomField>