MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <formula>IF(
    ISBLANK(CaseId__c),
    NULL,

    IF(
        NOT(ISBLANK(CompletionDate__c)),

        IF(
            CompletionDate__c &gt; DueTime__c,
            &quot;Breached&quot;,
            &quot;Resolved&quot;
        ),

        IF(
            CaseId__r.IsClosed,

            IF(
                DueTime__c &lt; CaseId__r.ClosedDate,
                &quot;Breached&quot;,
                &quot;Resolved&quot;
            ),

            IF(
                DueTime__c &lt; NOW(),
                &quot;Breached&quot;,
                &quot;OnTrack&quot;
            )
        )
    )
)</formula>
    <label>Current Status</label>
    <type>Text</type>
</CustomField>