MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Customer_Communication__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communication__c</fullName>
    <label>Customer Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Update Provided Over Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>