MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Customer_Communication_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communication_Sent_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Communication Sent At</label>
    <type>DateTime</type>
</CustomField>