MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/DueTime__c.field-meta.xml
<CustomField>
    <fullName>DueTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Time</label>
    <type>DateTime</type>
</CustomField>