MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_101_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_101_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation 101 Time</label>
    <type>DateTime</type>
</CustomField>