MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_103_Time__c.field-meta.xml
<CustomField>
    <fullName>Escalation_103_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation 103 Time</label>
    <type>DateTime</type>
</CustomField>