MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_1_Id__c.field-meta.xml
<CustomField>
    <fullName>Escalation_1_Id__c</fullName>
    <formula>Master_SLA__r.Escalation_1_Contact__c</formula>
    <label>Escalation 1 Id</label>
    <type>Text</type>
</CustomField>