MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Escalation_1_Name__c</fullName>
    <formula>Master_SLA__r.Escalation_1_Contact__r.FirstName + &apos; &apos; +  Master_SLA__r.Escalation_1_Contact__r.LastName</formula>
    <label>Escalation 1 Name</label>
    <type>Text</type>
</CustomField>