MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalation_2_Email__c</fullName>
    <formula>Master_SLA__r.Escalation_2_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 2 Email</label>
    <type>Text</type>
</CustomField>