MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_2_Id__c.field-meta.xml
<CustomField>
    <fullName>Escalation_2_Id__c</fullName>
    <formula>Master_SLA__r.Escalation_2_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 2 Id</label>
    <type>Text</type>
</CustomField>