MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Escalation_2_Name__c</fullName>
    <formula>Master_SLA__r.Escalation_2_Contact__r.FirstName + &apos; &apos; + Master_SLA__r.Escalation_2_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 2 Name</label>
    <type>Text</type>
</CustomField>