MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_3_Email__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_Email__c</fullName>
    <formula>Master_SLA__r.Escalation_3_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 3 Email</label>
    <type>Text</type>
</CustomField>