MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Escalation_3_name__c.field-meta.xml
<CustomField>
    <fullName>Escalation_3_name__c</fullName>
    <formula>Master_SLA__r.Escalation_3_Contact__r.FirstName + &apos; &apos; + Master_SLA__r.Escalation_3_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation 3 Name</label>
    <type>Text</type>
</CustomField>