MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Extension_Approval__c.field-meta.xml
<CustomField>
    <fullName>Extension_Approval__c</fullName>
    <label>Extension Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>