MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Extension_Comments__c.field-meta.xml
<CustomField>
    <fullName>Extension_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension Comments</label>
    <type>TextArea</type>
</CustomField>