MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Extension_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Extension_In_Hours__c</fullName>
    <label>Extension In Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>