MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/ExtentionTime__c.field-meta.xml
<CustomField>
    <fullName>ExtentionTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExtentionTime</label>
    <type>DateTime</type>
</CustomField>