MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Is_Extension_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Extension_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Extension Allowed</label>
    <type>Checkbox</type>
</CustomField>