MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Is_Latest__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>