MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/IsReAssigned__c.field-meta.xml
<CustomField>
    <fullName>IsReAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Assign</label>
    <type>Checkbox</type>
</CustomField>