MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/IsViolated__c.field-meta.xml
<CustomField>
    <fullName>IsViolated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsViolated</label>
    <type>Checkbox</type>
</CustomField>