MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Master_SLA__c.field-meta.xml
<CustomField>
    <fullName>Master_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master SLA</label>
    <referenceTo>Master_SLA__c</referenceTo>
    <relationshipName>Milestones_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>