MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Request_Extension__c.field-meta.xml
<CustomField>
    <fullName>Request_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Extension</label>
    <type>Checkbox</type>
</CustomField>