MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Respond_Before__c.field-meta.xml
<CustomField>
    <fullName>Respond_Before__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(Master_SLA__r.Response_SLA__c),
    Master_SLA__r.Response_SLA__c = 0
  ),
  null,
  CreatedDate + ((Master_SLA__r.Response_SLA__c)/24)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Respond Before</label>
    <type>DateTime</type>
</CustomField>