MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Response_SLA__c.field-meta.xml
<CustomField>
    <fullName>Response_SLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response SLA</label>
    <type>DateTime</type>
</CustomField>