MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Cases SLAs</relationshipLabel>
    <relationshipName>Cases_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>