MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>SLAs</relationshipLabel>
    <relationshipName>SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>