MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/SLA_User__c.field-meta.xml
<CustomField>
    <fullName>SLA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>