MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>