MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breached</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>OnTrack</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Reassinged</fullName>
                <isActive>false</isActive>
                <label>Reassinged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>