MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/validationRules/ExtensionInHours_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>ExtensionInHours_Invalid</fullName>
    <active>true</active>
    <description>Extension should be greater than or equal to 1 hour.</description>
    <errorConditionFormula>AND(NOT(ISNULL(Extension_In_Hours__c)) , Extension_In_Hours__c &lt; 1)</errorConditionFormula>
    <errorDisplayField>Extension_In_Hours__c</errorDisplayField>
    <errorMessage>Extension should be greater than or equal to 1 hour.</errorMessage>
</ValidationRule>