MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/validationRules/ExtensionRequested.validationRule-meta.xml
<ValidationRule>
    <fullName>ExtensionRequested</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  Request_Extension__c =TRUE, OR(ISBLANK( Extension_In_Hours__c ),ISBLANK( Extension_Comments__c)))</errorConditionFormula>
    <errorMessage>Please fill the Extension In hours and comments</errorMessage>
</ValidationRule>