MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/validationRules/IsExtensionAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>IsExtensionAllowed</fullName>
    <active>true</active>
    <description>Sorry! This subcategory does not allow SLA extension.</description>
    <errorConditionFormula>AND(!Is_Extension_Allowed__c, !ISNULL( Extension_In_Hours__c ))</errorConditionFormula>
    <errorDisplayField>Request_Extension__c</errorDisplayField>
    <errorMessage>Sorry! This subcategory does not allow SLA extension.</errorMessage>
</ValidationRule>