MODON MRE BPDEV/force-app/main/default/objects/CaseSLA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>Master_SLA__c</columns>
    <columns>CaseOwner__c</columns>
    <columns>Comments__c</columns>
    <columns>StartTime__c</columns>
    <columns>DueTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>IsExtended__c</columns>
    <columns>ExtentionTime__c</columns>
    <columns>IsViolated__c</columns>
    <columns>IsReAssigned__c</columns>
    <columns>CompletionDate__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DueTime__c</field>
        <operation>greaterThan</operation>
        <value>2/4/2025 3:11 PM</value>
    </filters>
    <label>All</label>
</ListView>